--- a/Game_Config/src/playerSetup.fxml
+++ b/Game_Config/src/playerSetup.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.collections.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
@@ -13,6 +14,17 @@
         <TextField prefWidth="122.0" text="              Select Race" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <TextField prefWidth="200.0" text="             Select Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <TextField prefWidth="200.0" text="              Select Color" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <ChoiceBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Flapper" />
+              <String fx:value="Human" />
+              <String fx:value="Alien" />
+            </FXCollections>
+          </items>
+        </ChoiceBox>
+        <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
