--- a/Game_Config/src/playerSetup.fxml
+++ b/Game_Config/src/playerSetup.fxml
@@ -11,9 +11,6 @@
   <children>
     <GridPane layoutX="96.0" layoutY="103.0" prefHeight="179.0" prefWidth="408.0">
       <children>
-        <TextField prefWidth="122.0" text="              Select Race" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField prefWidth="200.0" text="             Select Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <TextField prefWidth="200.0" text="              Select Color" GridPane.columnIndex="0" GridPane.rowIndex="2" />
         <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
         <ChoiceBox GridPane.columnIndex="1" GridPane.rowIndex="1">
           <items>
@@ -25,6 +22,9 @@
           </items>
         </ChoiceBox>
         <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Type Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Label text="Selct Race" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <Label text="Select Color" GridPane.columnIndex="0" GridPane.rowIndex="2" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,8 +36,8 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-    <TextField layoutX="222.0" layoutY="27.0" prefWidth="145.0" text="Player Configuration" />
     <Button layoutX="351.0" layoutY="352.0" mnemonicParsing="false" text="Next" />
     <Button layoutX="197.0" layoutY="352.0" mnemonicParsing="false" text="Back" />
+    <Label layoutX="236.0" layoutY="36.0" text="Player Configuration" />
   </children>
 </AnchorPane>
