--- a/Game_Config/src/sample/M.U.L.E Game Setup.fxml
+++ b/Game_Config/src/sample/M.U.L.E Game Setup.fxml
@@ -41,8 +41,8 @@
         </FXCollections>
       </items>
     </ChoiceBox>
-    <Button mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-    <Button alignment="TOP_LEFT" mnemonicParsing="false" opacity="1.0" text="Next" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+    <Button fx:id="cancelButton" mnemonicParsing="false" text="Cancel" onAction="#buttonClicked" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+    <Button fx:id="nextButton" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#buttonClicked" opacity="1.0" text="Next" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
   </children>
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="51.0" />
