--- a/Game_Config/src/sample/playerSetup.fxml
+++ b/Game_Config/src/sample/playerSetup.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.999977929685" prefWidth="599.99951171875" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.999977929685" prefWidth="599.99951171875" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.Controller">
   <children>
     <GridPane layoutX="96.0" layoutY="103.0" prefHeight="179.0" prefWidth="408.0">
       <children>
@@ -23,7 +23,7 @@
         </ChoiceBox>
         <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <Label text="Type Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Label text="Selct Race" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <Label text="Select Race" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label text="Select Color" GridPane.columnIndex="0" GridPane.rowIndex="2" />
       </children>
       <columnConstraints>
@@ -36,8 +36,8 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-    <Button layoutX="351.0" layoutY="352.0" mnemonicParsing="false" text="Next" />
-    <Button layoutX="197.0" layoutY="352.0" mnemonicParsing="false" text="Back" />
+    <Button fx:id="nextButton2" onAction="#buttonClicked" layoutX="351.0" layoutY="352.0" mnemonicParsing="false" text="Next" />
+    <Button fx:id="backButton" onAction="#buttonClicked" layoutX="197.0" layoutY="352.0" mnemonicParsing="false" text="Back" />
     <Label layoutX="236.0" layoutY="36.0" text="Player Configuration" />
   </children>
 </AnchorPane>
