--- a/Game_Config/src/sample/playerSetup.fxml
+++ b/Game_Config/src/sample/playerSetup.fxml
@@ -12,7 +12,7 @@
     <GridPane layoutX="96.0" layoutY="103.0" prefHeight="179.0" prefWidth="408.0">
       <children>
         <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <ChoiceBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <ChoiceBox fx:id="raceChoice" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Flapper" />
