--- a/Game_Config/src/sample/M.U.L.E Game Setup.fxml
+++ b/Game_Config/src/sample/M.U.L.E Game Setup.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.*?>
 
-<GridPane id="M.U.L.E. Game Setup" alignment="CENTER" hgap="10.0" prefHeight="340.6552734375" prefWidth="376.0" vgap="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.Controller">
+<GridPane id="M.U.L.E. Game Setup" alignment="CENTER" hgap="10.0" prefHeight="400.00010681152344" prefWidth="600.0" vgap="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.Controller">
   <children>
     <ChoiceBox maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="0">
       <items>
@@ -21,9 +21,13 @@
         </FXCollections>
       </items>
     </ChoiceBox>
-    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulty" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Map Type" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Players" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulty" GridPane.columnIndex="1" GridPane.rowIndex="0">
+      <font>
+        <Font size="15.0" fx:id="x1" />
+      </font>
+    </Text>
+    <Text font="$x1" strokeType="OUTSIDE" strokeWidth="0.0" text="Map Type" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Text font="$x1" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Players" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     <ChoiceBox fx:id="mapType" minHeight="-Infinity" minWidth="-Infinity" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
       <items>
         <FXCollections fx:factory="observableArrayList">
@@ -41,14 +45,14 @@
         </FXCollections>
       </items>
     </ChoiceBox>
-    <Button fx:id="cancelButton" mnemonicParsing="false" text="Cancel" onAction="#buttonClicked" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+    <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#buttonClicked" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
     <Button fx:id="nextButton" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#buttonClicked" opacity="1.0" text="Next" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
   </children>
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="51.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="128.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="87.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="80.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="157.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="126.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" prefWidth="130.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="157.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
