--- a/Game_Config/src/sample/playerSetup.fxml
+++ b/Game_Config/src/sample/playerSetup.fxml
@@ -38,8 +38,8 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-    <Button fx:id="nextButton2" onAction="#buttonClicked" layoutX="351.0" layoutY="352.0" mnemonicParsing="false" text="Next" />
-    <Button fx:id="backButton" onAction="#buttonClicked" layoutX="197.0" layoutY="352.0" mnemonicParsing="false" text="Back" />
+    <Button fx:id="nextButton2" onAction="#buttonClicked2" layoutX="351.0" layoutY="352.0" mnemonicParsing="false" text="Next" />
+    <Button fx:id="backButton" onAction="#buttonClicked2" layoutX="197.0" layoutY="352.0" mnemonicParsing="false" text="Back" />
     <Label layoutX="236.0" layoutY="36.0" text="Player Configuration" />
   </children>
 </AnchorPane>
