--- a/Game_Config/src/sample/playerSetup.fxml
+++ b/Game_Config/src/sample/playerSetup.fxml
@@ -11,7 +11,7 @@
   <children>
     <GridPane layoutX="96.0" layoutY="103.0" prefHeight="179.0" prefWidth="408.0">
       <children>
-        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="playerName" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
         <ChoiceBox fx:id="raceChoice" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <items>
             <FXCollections fx:factory="observableArrayList">
@@ -23,7 +23,7 @@
             </FXCollections>
           </items>
         </ChoiceBox>
-        <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <ColorPicker fx:id="colorChoice" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <Label text="Type Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <Label text="Select Race" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label text="Select Color" GridPane.columnIndex="0" GridPane.rowIndex="2" />
@@ -38,8 +38,8 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-    <Button fx:id="nextButton2" onAction="#buttonClicked2" layoutX="351.0" layoutY="352.0" mnemonicParsing="false" text="Next" />
-    <Button fx:id="backButton" onAction="#buttonClicked2" layoutX="197.0" layoutY="352.0" mnemonicParsing="false" text="Back" />
+    <Button fx:id="nextButton2" layoutX="351.0" layoutY="352.0" mnemonicParsing="false" onAction="#buttonClicked2" text="Next" />
+    <Button fx:id="backButton" layoutX="197.0" layoutY="352.0" mnemonicParsing="false" onAction="#buttonClicked2" text="Back" />
     <Label layoutX="236.0" layoutY="36.0" text="Player Configuration" />
   </children>
 </AnchorPane>
