--- a/gameConfig/Map.fxml
+++ b/gameConfig/Map.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <GridPane layoutX="7.0" layoutY="0.0" prefHeight="400.0" prefWidth="593.0">
+    <GridPane layoutX="29.0" layoutY="0.0" prefHeight="400.0" prefWidth="593.0">
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,29 +20,29 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-    <ImageView id="bg" fitHeight="405.0" fitWidth="600.0" layoutX="0.0" layoutY="-5.0" pickOnBounds="true">
+    <ImageView id="bg" fitHeight="400.0" fitWidth="600.0" layoutX="0.0" layoutY="0.0" pickOnBounds="true">
       <image>
-        <Image url="@../../Media/Media/bg.png" preserveRatio="true" smooth="true" />
+        <Image url="@Media/bg.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <ImageView id="bldg1" fitHeight="155.0" fitWidth="204.0" layoutX="7.0" layoutY="-5.0" pickOnBounds="true">
+    <ImageView id="bldg1" fitHeight="146.0" fitWidth="144.0" layoutX="14.0" layoutY="0.0" pickOnBounds="true">
       <image>
-        <Image url="@../../Media/Media/bldg1.png" preserveRatio="true" smooth="true" />
+        <Image url="@Media/bldg1.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <ImageView id="bldg2" fitHeight="111.0" fitWidth="194.0" layoutX="399.0" layoutY="14.0" pickOnBounds="true">
+    <ImageView id="bldg2" fitHeight="136.0" fitWidth="252.0" layoutX="342.0" layoutY="10.0" pickOnBounds="true">
       <image>
-        <Image url="@../../Media/Media/bldg2.png" preserveRatio="true" smooth="true" />
+        <Image url="@Media/bldg2.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <ImageView id="bldg3" fitHeight="147.0" fitWidth="273.0" layoutX="7.0" layoutY="246.0" pickOnBounds="true">
+    <ImageView id="bldg3" fitHeight="136.0" fitWidth="205.0" layoutX="395.0" layoutY="250.0" pickOnBounds="true">
       <image>
-        <Image url="@../../Media/Media/bldg3.png" preserveRatio="true" smooth="true" />
+        <Image url="@Media/bldg3.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <ImageView id="bldg4" fitHeight="147.0" fitWidth="204.0" layoutX="389.0" layoutY="246.0" pickOnBounds="true">
+    <ImageView id="bldg4" fitHeight="122.0" fitWidth="213.0" layoutX="0.0" layoutY="264.0" pickOnBounds="true">
       <image>
-        <Image url="@../../Media/Media/bldg4.png" preserveRatio="true" smooth="true" />
+        <Image url="@Media/bldg4.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
   </children>
