--- a/gameConfig/playerStart.fxml
+++ b/gameConfig/playerStart.fxml
@@ -9,17 +9,11 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="150.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <Button layoutX="32.0" layoutY="103.0" mnemonicParsing="false" text="Start Turn" />
-    <Text layoutX="60.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It is">
+    <Button layoutX="32.0" layoutY="86.0" mnemonicParsing="false" text="Start Turn" />
+    <Text layoutX="16.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It's Your Turn!">
       <font>
         <Font size="17.0" fx:id="x1" />
       </font>
     </Text>
-    <Text fx:id="playerName" layoutX="44.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="name's">
-      <font>
-        <Font name="System Bold" size="17.0" />
-      </font>
-    </Text>
-    <Text font="$x1" layoutX="53.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Turn!" />
   </children>
 </AnchorPane>
