--- a/gameConfig/TownMap.fxml
+++ b/gameConfig/TownMap.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
@@ -45,5 +46,9 @@
         <Image url="@Media/bldg4.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
+    <Button id="pubButton" layoutX="158.0" layoutY="126.0" mnemonicParsing="false" text="Pub" />
+    <Button id="landOfficeButton" layoutX="375.0" layoutY="126.0" mnemonicParsing="false" text="Land Office" />
+    <Button id="assayOfficeButton" layoutX="158.0" layoutY="366.0" mnemonicParsing="false" text="Assay Office" />
+    <Button id="storeButton" layoutX="375.0" layoutY="365.0" mnemonicParsing="false" text="Store" />
   </children>
 </AnchorPane>
