--- a/gameConfig/TownMap.fxml
+++ b/gameConfig/TownMap.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.Controller">
   <children>
     <GridPane layoutX="29.0" layoutY="0.0" prefHeight="400.0" prefWidth="593.0">
       <columnConstraints>
@@ -46,9 +46,9 @@
         <Image url="@Media/bldg4.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <Button id="pubButton" layoutX="158.0" layoutY="126.0" mnemonicParsing="false" text="Pub" />
-    <Button id="landOfficeButton" layoutX="375.0" layoutY="126.0" mnemonicParsing="false" text="Land Office" />
-    <Button id="assayOfficeButton" layoutX="158.0" layoutY="366.0" mnemonicParsing="false" text="Assay Office" />
-    <Button id="storeButton" layoutX="375.0" layoutY="365.0" mnemonicParsing="false" text="Store" />
+    <Button fx:id="pubButton" layoutX="158.0" layoutY="126.0" mnemonicParsing="false" onAction="#buttonClicked4" text="Pub" />
+    <Button fx:id="landOfficeButton" layoutX="375.0" layoutY="126.0" mnemonicParsing="false" onAction="#buttonClicked4" text="Land Office" />
+    <Button fx:id="assayOfficeButton" layoutX="158.0" layoutY="366.0" mnemonicParsing="false" onAction="#buttonClicked4" text="Assay Office" />
+    <Button fx:id="storeButton" layoutX="375.0" layoutY="365.0" mnemonicParsing="false" onAction="#buttonClicked4" text="Store" />
   </children>
 </AnchorPane>
