--- a/gameConfig/TownMap.fxml
+++ b/gameConfig/TownMap.fxml
@@ -49,6 +49,6 @@
     <Button fx:id="pubButton" layoutX="158.0" layoutY="126.0" mnemonicParsing="false" onAction="#pubButtonClicked" text="Pub" />
     <Button fx:id="landOfficeButton" layoutX="375.0" layoutY="126.0" mnemonicParsing="false" onAction="#landOfficeButtonClicked" text="Land Office" />
     <Button fx:id="assayOfficeButton" layoutX="158.0" layoutY="366.0" mnemonicParsing="false" onAction="#landOfficeButtonClicked" text="Assay Office" />
-    <Button fx:id="storeButton" layoutX="375.0" layoutY="365.0" mnemonicParsing="false" onAction="#landOfficeButtonClicked" text="Store" />
+    <Button fx:id="storeButton" layoutX="375.0" layoutY="365.0" mnemonicParsing="false" onAction="#storeButtonClicked" text="Store" />
   </children>
 </AnchorPane>
