--- a/gameConfig/PubGambleInterface.fxml
+++ b/gameConfig/PubGambleInterface.fxml
@@ -10,16 +10,20 @@
 
 <AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
   <children>
-    <Text layoutX="235.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Pub!" />
+    <Text layoutX="211.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Pub!">
+      <font>
+        <Font name="System Bold" size="17.0" />
+      </font>
+    </Text>
     <Button fx:id="backButton" layoutX="18.0" layoutY="22.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
     <Text layoutX="82.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Here, you can gamble by getting bonus money for your unused time!" />
     <Text layoutX="218.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click the joystick to begin" />
     <Text layoutX="436.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amount Won:" />
-    <ImageView id="slotmachine" fitHeight="331.0" fitWidth="252.0" layoutX="165.0" layoutY="105.0" pickOnBounds="true">
+    <ImageView fitHeight="258.65172169873114" fitWidth="192.8251953125" layoutX="203.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true">
       <image>
-        <Image url="@Media/slotmachine.gif" preserveRatio="true" smooth="true" />
+        <Image url="@Media/slotmachine2.png" />
       </image>
     </ImageView>
-    <Button fx:id="gambleButton" layoutX="346.0" layoutY="193.0" minWidth="22.0" mnemonicParsing="false" onAction="#gambleButtonClicked" opacity="0.0" prefHeight="66.0" prefWidth="51.0" text="Gamble!" />
+    <Button fx:id="gambleButton" layoutX="326.0" layoutY="186.0" minWidth="22.0" mnemonicParsing="false" onAction="#gambleButtonClicked" opacity="0.0" prefHeight="64.0" prefWidth="62.96044921875" text="Gamble!" />
   </children>
 </AnchorPane>
