--- a/gameConfig/storeInterface2.fxml
+++ b/gameConfig/storeInterface2.fxml
@@ -29,7 +29,7 @@
          <font>
             <Font name="Bradley Hand Bold" size="18.0" />
          </font></Text>
-    <Button id="backButton" fx:id="backButton2" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonClicked2" text="Back" />
+    <Button id="backButton" fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
       <GridPane gridLinesVisible="true" layoutX="148.0" layoutY="138.0" prefHeight="190.0" prefWidth="305.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0" minWidth="10.0" prefWidth="75.0" />
