--- a/gameConfig/UIFiles/LandBuyInterface.fxml
+++ b/gameConfig/UIFiles/LandBuyInterface.fxml
@@ -22,8 +22,8 @@
     </ImageView>
     <Text layoutX="82.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="If you do not wish to make a purchase this round, please select Pass." />
     <Text layoutX="76.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Land costs $300 per unit. To purchase, select the land plot on the grid" />
-    <Button fx:id="landBuyButton" layoutX="328.0" layoutY="314.0" mnemonicParsing="false" onAction="#buyLandButtonClicked" text="Buy Land" />
-    <Button fx:id="passButton" layoutX="208.0" layoutY="314.0" mnemonicParsing="false" onAction="#buyLandButtonClicked" text="Pass" />
+    <Button fx:id="landBuyButton" layoutX="280.0" layoutY="314.0" mnemonicParsing="false" onAction="#buyLandButtonClicked" text="Buy Land" />
+    <Button id="passButton" fx:id="backButton2" layoutX="82.0" layoutY="60.0" mnemonicParsing="false" onAction="#buyLandButtonClicked" text="Back" />
     <Text layoutX="148.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You cannot buy land owned by someone else." />
     <Text layoutX="271.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Land Office">
       <font>
